src/objects/SPE2_SurveyTrackerRespondent__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>SPE2 Survey Tracker Respondents</relationshipLabel>
        <relationshipName>SPE2_Survey_Tracker_Respondents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DateofExecution__c</fullName>
        <formula>Survey_Tracker__r.DateOfExecution__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Date of Execution</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ForceSurvey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Force Survey</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>IsResponseReceived__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Response Received ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastSurveyEmailReceivedDate__c</fullName>
        <label>Last Survey Email Sent</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RespondentC__c</fullName>
        <defaultValue>0</defaultValue>
        <label>RespondentChecked</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SurveyReminderBeforeExecutionDate__c</fullName>
        <formula>Survey_Tracker__r.SurveyReminderBeforeExecutionDate__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>SurveyReminderBeforeExecutionDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SurveyRespondent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey Respondent</label>
        <referenceTo>SPE2_Survey_Respondents__c</referenceTo>
        <relationshipLabel>SPE2 Survey Tracker Respondents</relationshipLabel>
        <relationshipName>SPE2_Survey_Tracker_Respondents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Survey_Tracker__c</fullName>
        <label>Survey Tracker</label>
        <referenceTo>SPE2_SurveyTracker__c</referenceTo>
        <relationshipLabel>SPE2 Survey Tracker Respondents</relationshipLabel>
        <relationshipName>SPE2_Survey_Tracker_Respondents</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Survey__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Survey</label>
        <referenceTo>SPE2Survey__c</referenceTo>
        <relationshipLabel>SPE2 Survey Tracker Respondents</relationshipLabel>
        <relationshipName>SPE2_Survey_Tracker_Respondents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TrackerExecution__c</fullName>
        <formula>MID(TEXT(Survey_Tracker__r.Survey_Execution_Date__c), 9, 2) &amp;&quot;-&quot;&amp; 
CASE(MID(TEXT(Survey_Tracker__r.Survey_Execution_Date__c), 6, 2), 
&quot;01&quot;, &quot;JAN&quot;, 
&quot;02&quot;, &quot;FEB&quot;, 
&quot;03&quot;, &quot;MAR&quot;, 
&quot;04&quot;, &quot;APR&quot;, 
&quot;05&quot;, &quot;MAY&quot;, 
&quot;06&quot;, &quot;JUN&quot;, 
&quot;07&quot;, &quot;JUL&quot;, 
&quot;08&quot;, &quot;AUG&quot;, 
&quot;09&quot;, &quot;SEP&quot;, 
&quot;10&quot;, &quot;OCT&quot;, 
&quot;11&quot;, &quot;NOV&quot;, 
&quot;12&quot;, &quot;DEC&quot;, 
&quot;Error&quot;) &amp;&quot;-&quot;&amp; 
MID(TEXT(Survey_Tracker__r.Survey_Execution_Date__c), 3, 2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TrackerExecution</label>
        <type>Text</type>
    </fields>
    <label>SPE2 SurveyTrackerRespondent</label>
    <nameField>
        <displayFormat>STR-{0000}</displayFormat>
        <label>SurveyTrackerName</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPE2 Survey Tracker Respondents</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>